# numgenius

./: Makefile  README.md  pyproject.toml
numgenius/: main.py  operations.py  views.py
